force-app/main/default/objects/Value_Map__c/Value_Map__c.object-meta.xml
<CustomObject>
    <description>Part of Vista Value Selling (VVS).</description>
    <label>Value Map</label>
    <nameField>
        <label>Value Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>