force-app/main/default/objects/Value_Map__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <description>Field used for Vista Value Selling</description>
    <label>Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>