force-app/main/default/objects/Value_Map__c/fields/Deadline_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Milestones__c</fullName>
    <description>Used for Vista Value Selling</description>
    <label>Deadline/Milestones</label>
    <type>TextArea</type>
</CustomField>