force-app/main/default/objects/Value_Map__c/fields/Economic_Buyer_Count__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer_Count__c</fullName>
    <description>Used for Vista Value Selling</description>
    <label>Economic Buyer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>