force-app/main/default/objects/Value_Map__c/fields/Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Initiatives__c</fullName>
    <description>Used for Vista Value Selling</description>
    <label>Initiatives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>