force-app/main/default/objects/Value_Map__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>Used for Vista Value Selling</description>
    <label>Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>