force-app/main/default/objects/Value_Map__c/fields/Opportunity_VVS__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_VVS__c</fullName>
    <description>Lookup field on Parent Opportunity for VVS</description>
    <label>Opportunity_VVS</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Value Maps</relationshipLabel>
    <relationshipName>Value_Maps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>