force-app/main/default/objects/Value_Map__c/fields/Our_Impact__c.field-meta.xml
<CustomField>
    <fullName>Our_Impact__c</fullName>
    <description>Used for Vista Value Selling</description>
    <label>Our Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>