force-app/main/default/objects/Value_Map__c/fields/Our_Proof__c.field-meta.xml
<CustomField>
    <fullName>Our_Proof__c</fullName>
    <description>Used for Vista Value Selling</description>
    <label>Our Proof</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>