force-app/main/default/objects/Value_Map__c/fields/Pain_Cost_of_Inaction__c.field-meta.xml
<CustomField>
    <fullName>Pain_Cost_of_Inaction__c</fullName>
    <description>Used for Vista Value Selling</description>
    <label>Pain/Cost of Inaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>