force-app/main/default/objects/Value_Map__c/fields/Success_Measure__c.field-meta.xml
<CustomField>
    <fullName>Success_Measure__c</fullName>
    <description>Used for Vista Value Selling</description>
    <label>Success Measure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>